--- a/HRM.ERP/appsettings.json
+++ b/HRM.ERP/appsettings.json
@@ -3,8 +3,8 @@
     //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-HRM.ERP-029463C2-64CC-45CF-8F8E-3D1D8D1A828F;Trusted_Connection=True;MultipleActiveResultSets=true",
 
 
-    //"DefaultConnection": "Server=TEMOFE\\MSSQLSERVE;Database=localerp4;Trusted_Connection=True;MultipleActiveResultSets=true"
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=localerp1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=TEMOFE\\MSSQLSERVE;Database=localerp4;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=localerp1;Trusted_Connection=True;MultipleActiveResultSets=true"
 
     //"DefaultConnection": "Server=tcp:erp4smedbserver.database.windows.net,1433;Initial Catalog=erp4smedb;Persist Security Info=False;User ID=junex07;Password=00728GE8hVBar;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
 
